--- a/deploy/crds/crd-challenges.yaml
+++ b/deploy/crds/crd-challenges.yaml
@@ -1042,7 +1042,7 @@ spec:
                               type: string
                             useUserManagedIdentity:
                               type: boolean
-                            userManagedIdentityId:
+                            userManagedIdentityID:
                               type: string
                         clouddns:
                           description: Use the Google Cloud DNS API to manage DNS01 challenge records.
@@ -1872,7 +1872,7 @@ spec:
                               type: string
                             useUserManagedIdentity:
                               type: boolean
-                            userManagedIdentityId:
+                            userManagedIdentityID:
                               type: string
                         cloudDNS:
                           description: Use the Google Cloud DNS API to manage DNS01 challenge records.
