--- a/deploy/crds/crd-clusterissuers.v1beta1.yaml
+++ b/deploy/crds/crd-clusterissuers.v1beta1.yaml
@@ -1262,7 +1262,7 @@ spec:
                                     type: string
                                   useUserManagedIdentity:
                                     type: boolean
-                                  userManagedIdentityId:
+                                  userManagedIdentityID:
                                     type: string
                               clouddns:
                                 description: Use the Google Cloud DNS API to manage DNS01 challenge records.
@@ -2280,7 +2280,7 @@ spec:
                                     type: string
                                   useUserManagedIdentity:
                                     type: boolean
-                                  userManagedIdentityId:
+                                  userManagedIdentityID:
                                     type: string
                               cloudDNS:
                                 description: Use the Google Cloud DNS API to manage DNS01 challenge records.
