--- a/deploy/crds/crd-issuers.yaml
+++ b/deploy/crds/crd-issuers.yaml
@@ -1276,7 +1276,7 @@ spec:
                                     type: string
                                   useUserManagedIdentity:
                                     type: boolean
-                                  userManagedIdentityId:
+                                  userManagedIdentityID:
                                     type: string
                               clouddns:
                                 description: Use the Google Cloud DNS API to manage DNS01 challenge records.
@@ -2308,7 +2308,7 @@ spec:
                                     type: string
                                   useUserManagedIdentity:
                                     type: boolean
-                                  userManagedIdentityId:
+                                  userManagedIdentityID:
                                     type: string
                               cloudDNS:
                                 description: Use the Google Cloud DNS API to manage DNS01 challenge records.
