Add revocation checks
Signed-off-by: Maartje Eyskens <maartje@eyskens.me>

--- a/cmd/ctl/pkg/inspect/secret/BUILD.bazel
+++ b/cmd/ctl/pkg/inspect/secret/BUILD.bazel
@@ -20,6 +20,7 @@ go_library(
         "@io_k8s_kubectl//pkg/cmd/util:go_default_library",
         "@io_k8s_kubectl//pkg/util/i18n:go_default_library",
         "@io_k8s_kubectl//pkg/util/templates:go_default_library",
+        "@org_golang_x_crypto//ocsp:go_default_library",
     ],
 )
 
