--- a/cmd/ctl/pkg/inspect/secret/BUILD.bazel
+++ b/cmd/ctl/pkg/inspect/secret/BUILD.bazel
@@ -10,6 +10,7 @@ go_library(
     visibility = ["//visibility:public"],
     deps = [
         "//pkg/apis/certmanager/v1:go_default_library",
+        "//pkg/apis/meta/v1:go_default_library",
         "//pkg/util/pki:go_default_library",
         "@com_github_spf13_cobra//:go_default_library",
         "@io_k8s_api//core/v1:go_default_library",
@@ -20,6 +21,7 @@ go_library(
         "@io_k8s_kubectl//pkg/cmd/util:go_default_library",
         "@io_k8s_kubectl//pkg/util/i18n:go_default_library",
         "@io_k8s_kubectl//pkg/util/templates:go_default_library",
+        "@io_k8s_utils//clock:go_default_library",
         "@org_golang_x_crypto//ocsp:go_default_library",
     ],
 )
@@ -40,15 +42,14 @@ filegroup(
 
 go_test(
     name = "go_default_test",
-    srcs = ["secret_test.go"],
+    srcs = [
+        "secret_test.go",
+        "util_test.go",
+    ],
     embed = [":go_default_library"],
     deps = [
-        "//pkg/apis/acme/v1beta1:go_default_library",
         "//pkg/apis/certmanager/v1:go_default_library",
-        "//pkg/apis/meta/v1:go_default_library",
-        "//test/unit/gen:go_default_library",
-        "@com_github_stretchr_testify//assert:go_default_library",
-        "@io_k8s_api//core/v1:go_default_library",
-        "@io_k8s_apimachinery//pkg/apis/meta/v1:go_default_library",
+        "//pkg/util/pki:go_default_library",
+        "@io_k8s_utils//clock/testing:go_default_library",
     ],
 )
