--- a/deploy/crds/crd-clusterissuers.yaml
+++ b/deploy/crds/crd-clusterissuers.yaml
@@ -862,6 +862,11 @@ spec:
                       type: array
                       items:
                         type: string
+                    ocspServer:
+                      description: The OCSP server is an X.509 v3 extension that defines the url of the OCSP responder. The OCSP responder can be queried for the revocation status of an issued certificate. If not set the certificate wil be issued without the OCSP server set.
+                      type: array
+                      items:
+                        type: string
                     secretName:
                       description: SecretName is the name of the secret used to sign Certificates issued by this Issuer.
                       type: string
@@ -1888,6 +1893,11 @@ spec:
                   properties:
                     crlDistributionPoints:
                       description: The CRL distribution points is an X.509 v3 certificate extension which identifies the location of the CRL from which the revocation of this certificate can be checked. If not set, certificates will be issued without distribution points set.
+                      type: array
+                      items:
+                        type: string
+                    ocspServer:
+                      description: The OCSP server is an X.509 v3 extension that defines the url of the OCSP responder. The OCSP responder can be queried for the revocation status of an issued certificate. If not set the certificate wil be issued without the OCSP server set.
                       type: array
                       items:
                         type: string
@@ -2922,6 +2932,11 @@ spec:
                       type: array
                       items:
                         type: string
+                    ocspServer:
+                      description: The OCSP server is an X.509 v3 extension that defines the url of the OCSP responder. The OCSP responder can be queried for the revocation status of an issued certificate. If not set the certificate wil be issued without the OCSP server set.
+                      type: array
+                      items:
+                        type: string
                     secretName:
                       description: SecretName is the name of the secret used to sign Certificates issued by this Issuer.
                       type: string
@@ -3950,6 +3965,11 @@ spec:
                   properties:
                     crlDistributionPoints:
                       description: The CRL distribution points is an X.509 v3 certificate extension which identifies the location of the CRL from which the revocation of this certificate can be checked. If not set, certificates will be issued without distribution points set.
+                      type: array
+                      items:
+                        type: string
+                    ocspServer:
+                      description: The OCSP server is an X.509 v3 extension that defines the url of the OCSP responder. The OCSP responder can be queried for the revocation status of an issued certificate. If not set the certificate wil be issued without the OCSP server set.
                       type: array
                       items:
                         type: string
