--- a/deploy/charts/cert-manager/templates/webhook-validating-webhook.yaml
+++ b/deploy/charts/cert-manager/templates/webhook-validating-webhook.yaml
@@ -2,7 +2,7 @@
 {{- if (or (not (.Capabilities.APIVersions.Has "admissionregistration.k8s.io/v1")) (.Capabilities.APIVersions.Has "hacking-helm.i-wish-this-wasnt-required.cert-manager.io/force-v1beta1-webhooks") ) }}
 apiVersion: admissionregistration.k8s.io/v1beta1
 {{- else }}
-{{- $isV1AdmissionRegistration = true -}}
+{{- $isV1AdmissionRegistration := true -}}
 apiVersion: admissionregistration.k8s.io/v1
 {{- end }}
 kind: ValidatingWebhookConfiguration
