--- a/deploy/crds/crd-issuers.yaml
+++ b/deploy/crds/crd-issuers.yaml
@@ -82,10 +82,14 @@ spec:
                       description: ExternalAccountBinding is a reference to a CA external account of the ACME server. If set, upon registration cert-manager will attempt to associate the given external account credentials with the registered ACME account.
                       type: object
                       required:
+                        - disableAccountKeyRegistration
                         - keyAlgorithm
                         - keyID
                         - keySecretRef
                       properties:
+                        disableAccountKeyRegistration:
+                          description: disableAccountKeyRegistration disables registering a new ACME External Account with the CA. If true, the issuer will only attempt to retrieve an existing account associated with the Account Key. Defaults to false.
+                          type: boolean
                         keyAlgorithm:
                           description: keyAlgorithm is the MAC key algorithm that the key is used for. Valid values are "HS256", "HS384" and "HS512".
                           type: string
@@ -1111,10 +1115,14 @@ spec:
                       description: ExternalAccountBinding is a reference to a CA external account of the ACME server. If set, upon registration cert-manager will attempt to associate the given external account credentials with the registered ACME account.
                       type: object
                       required:
+                        - disableAccountKeyRegistration
                         - keyAlgorithm
                         - keyID
                         - keySecretRef
                       properties:
+                        disableAccountKeyRegistration:
+                          description: disableAccountKeyRegistration disables registering a new ACME External Account with the CA. If true, the issuer will only attempt to retrieve an existing account associated with the Account Key. Defaults to false.
+                          type: boolean
                         keyAlgorithm:
                           description: keyAlgorithm is the MAC key algorithm that the key is used for. Valid values are "HS256", "HS384" and "HS512".
                           type: string
@@ -2142,10 +2150,14 @@ spec:
                       description: ExternalAccountBinding is a reference to a CA external account of the ACME server. If set, upon registration cert-manager will attempt to associate the given external account credentials with the registered ACME account.
                       type: object
                       required:
+                        - disableAccountKeyRegistration
                         - keyAlgorithm
                         - keyID
                         - keySecretRef
                       properties:
+                        disableAccountKeyRegistration:
+                          description: disableAccountKeyRegistration disables registering a new ACME External Account with the CA. If true, the issuer will only attempt to retrieve an existing account associated with the Account Key. Defaults to false.
+                          type: boolean
                         keyAlgorithm:
                           description: keyAlgorithm is the MAC key algorithm that the key is used for. Valid values are "HS256", "HS384" and "HS512".
                           type: string
@@ -3173,10 +3185,14 @@ spec:
                       description: ExternalAccountBinding is a reference to a CA external account of the ACME server. If set, upon registration cert-manager will attempt to associate the given external account credentials with the registered ACME account.
                       type: object
                       required:
+                        - disableAccountKeyRegistration
                         - keyAlgorithm
                         - keyID
                         - keySecretRef
                       properties:
+                        disableAccountKeyRegistration:
+                          description: disableAccountKeyRegistration disables registering a new ACME External Account with the CA. If true, the issuer will only attempt to retrieve an existing account associated with the Account Key. Defaults to false.
+                          type: boolean
                         keyAlgorithm:
                           description: keyAlgorithm is the MAC key algorithm that the key is used for. Valid values are "HS256", "HS384" and "HS512".
                           type: string
